# orkgify-backend

./: .env.example  .pre-commit-config.yaml  README.md  docker-compose.yml  openapi.json  pyproject.toml  requirements.txt  setup.cfg
app/: app_factory.py  main.py
app/components/: __init__.py
app/components/db/: __init__.py  crud.py
app/components/llm/: __init__.py  base.py  claude.py  gpt.py
app/components/utils/: __init__.py
app/core/: config.py
app/models/: __init__.py  llms.py
app/routers/: llms.py
app/scripts/: create_lvl_1_questions.py  pocketbase_export.json
app/services/: __init__.py  llms.py
