[tool.poetry]
name = "orkgify"
version = "0.1.0"
description = "The core backend to serve the ORKGify game"
authors = ["YaserJaradeh <yaser.jaradeh@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.105.0"
openai = "^1.5.0"
python-dotenv = "^1.0.0"
orkg = "^0.19.3"
pocketbase = "^0.9.2"
anthropic = "^0.7.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pre-commit = "^3.6.0"
flake8 = "^6.1.0"
isort = "^5.13.2"
black = "^23.12.0"
uvicorn = "^0.24.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
